current/crash_report/tout10/r3/gcc482/pk16/save_tc/cb1/20190215093127854794169.c-482-0.txt
20190215093127854794169.c: In function ‘func_78’:
20190215093127854794169.c:278:1: error: unrecognizable insn:
 }
 ^
(insn 370 369 371 21 (set (reg:QI 480)
        (const_int 145 [0x91])) 20190215093127854794169.c:211 -1
     (nil))
20190215093127854794169.c:278:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
